--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "barryvdh/laravel-ide-helper": "^2.3",
         "doctrine/dbal": "^2.5",
         "fzaninotto/faker": "~1.4",
+        "laravel/homestead": "^5.2",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
