--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "Zizaco/entrust": "^1.8",
+        "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "barryvdh/laravel-debugbar": "^2.3"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.3",
